Added About ME and Resume placeholders.

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -59,6 +59,5 @@ header {
 
 #nav-bar a {
   color: green
-  background-color: var(var(--structure-color))
-  
+  background-color: var(--structure-color);
 }
