--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -38,7 +38,7 @@ h3 {
   width: fit-content;
 }
 
-img {
+header img {
   max-height: 300px;
   border-radius: 40px;
 }
@@ -61,4 +61,25 @@ header {
 #nav-bar a {
   color: green
   background-color: var(--structure-color);
+}
+
+.projects {
+  display: flex;
+  align-items: center;
+}
+
+/* This does nothing. Why??!? */
+.card-main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+}
+
+.card-main img {
+  max-width: 100%;
+}
+
+.card-small img {
+  max-width: 50%;
 }
