--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -15,8 +15,9 @@ body {
 }
 
 /* This is no longer working */
-h1, h2, h3, {
+h1, h2, h3 {
   color: var(--heading-color);
+  padding-left: 1rem;
 }
 
 h1 {
@@ -31,16 +32,7 @@ h2 {
 
 h3 {
   font-size: 1.5rem;
-}
-
-.frame {
-  background-color: var(--main-bg-color);
-  width: fit-content;
-}
-
-header img {
-  max-height: 300px;
-  border-radius: 40px;
+  margin: .5rem 0 .5rem 0;
 }
 
 header {
@@ -49,31 +41,45 @@ header {
   align-items: center;
 }
 
+header img {
+  max-height: 300px;
+  border-radius: 40px;
+}
+
+/* This doesn't apply Background Color */
+.frame {
+  background-color: var(--main-bg-color);
+  width: fit-content;
+}
+
+/* background links white */
 #nav-bar {
   display: flex;
   flex-wrap: wrap;
-  align-items: space-between;
+  align-content: space-between;
   border: var(--heading-color);
   padding: 1rem;
   background-color: var(--structure-color)
 }
 
+/* link letters wrong color */
 #nav-bar a {
   color: green
   background-color: var(--structure-color);
 }
 
-.projects {
+#projects {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 /* This does nothing. Why??!? */
 .card-main {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  
 }
 
 .card-main img {
