--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -75,7 +75,7 @@ header img {
 }
 
 /* This does nothing. Why??!? */
-.card-main {
+.card-main, .card-small {
   display: flex;
   flex-direction: column;
   align-items: center;
