--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -15,7 +15,9 @@ body {
 }
 
 /* This is no longer working */
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   color: var(--heading-color);
   padding-left: 1rem;
 }
@@ -64,18 +66,18 @@ header img {
 
 /* link letters wrong color */
 #nav-bar a {
-  color: green
-  background-color: var(--structure-color);
+  color: green background-color: var(--structure-color);
 }
 
 #projects {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
+
 /* This does nothing. Why??!? */
-.card-main, .card-small {
+.card {
   display: flex;
   flex-direction: column;
   align-items: center;
