--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -57,7 +57,6 @@ header img {
 /* background links white */
 #nav-bar {
   display: flex;
-  flex-wrap: wrap;
   align-content: space-between;
   border: var(--heading-color);
   padding: 1rem;
@@ -66,7 +65,11 @@ header img {
 
 /* link letters wrong color */
 #nav-bar a {
-  color: green background-color: var(--structure-color);
+  color: green background-color var(--structure-color);
+}
+
+.nav-link {
+  background-color: var(--structure-color);
 }
 
 #projects {
@@ -84,10 +87,18 @@ header img {
   justify-content: center;
 }
 
+.card-main {
+  width: 100%
+}
+
 .card-main img {
-  max-width: 100%;
+  width: 100%
+}
+
+.card-small {
+  width: 50%;
 }
 
 .card-small img {
-  max-width: 50%;
+  width: 50%
 }
