Working on nav bar

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -14,7 +14,6 @@ body {
   background-color: var(--main-bg-color);
 }
 
-/* This is no longer working */
 h1,
 h2,
 h3 {
@@ -24,17 +23,17 @@ h3 {
 
 h1 {
   font-size: 4rem;
-  margin: 1rem 0 1rem 0;
+  margin: 1rem 0;
 }
 
 h2 {
   font-size: 2rem;
-  margin: .75rem 0 .75rem 0;
+  margin: .75rem 0
 }
 
 h3 {
   font-size: 1.5rem;
-  margin: .5rem 0 .5rem 0;
+  margin: .5rem 0;
 }
 
 header {
@@ -49,26 +48,24 @@ header img {
 }
 
 /* This doesn't apply Background Color */
-.frame {
+/* .frame {
   background-color: var(--main-bg-color);
   width: fit-content;
-}
+} */
 
 /* background links white */
 #nav-bar {
-  display: flex;
-  align-content: space-between;
-  border: var(--heading-color);
+  display: block;
+  border: solid var(--heading-color);
   padding: 1rem;
-  background-color: var(--structure-color)
+  background-color: var(--structure-color);
+  width: 100%;
+  
 }
 
 /* link letters wrong color */
 #nav-bar a {
-  color: green background-color var(--structure-color);
-}
-
-.nav-link {
+  color: green;
   background-color: var(--structure-color);
 }
 
