--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -69,7 +69,7 @@ header img {
   background-color: var(--structure-color);
 }
 
-#projects {
+.projects {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
