Switched nav-bar to box. Adds padding between links.

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -54,9 +54,9 @@ header img {
 } */
 
 #nav-bar {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  display: box;
+  align-items: ;
+  text-align: center;
   border: solid var(--heading-color);
   padding: 1rem;
   background-color: var(--structure-color);
@@ -66,6 +66,7 @@ header img {
 #nav-bar a {
   color: green;
   background-color: var(--structure-color);
+  padding-inline: 1rem;
 }
 
 .projects {
