--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -36,6 +36,13 @@ h3 {
   margin: .5rem 0;
 }
 
+h4 {
+  font-size: 1.25rem;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin: .25 .25;
+  text-decoration: none
+}
+
 header {
   display: flex;
   flex-direction: column;
@@ -81,6 +88,7 @@ header img {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-decoration: none;
 }
 
 /* Add Hover State for all cards */
