--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -70,9 +70,8 @@ header img {
 } */
 
 #nav-bar {
-  display: box;
-  align-items: ;
-  text-align: center;
+  display: flex;
+  justify-content: flex-end;
   border: solid var(--heading-color);
   padding: 1rem;
   background-color: var(--structure-color);
@@ -89,6 +88,11 @@ header img {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+}
+
+.projects a {
+  text-decoration: none;
+  /* color: var(--); */
 }
 
 
@@ -129,6 +133,16 @@ header img {
 
 }
 
+.about-me p span {
+  font-style: italic;
+}
+
+/* .form section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+} */
+
 .form {
   display: flex;
   flex-direction: column;
@@ -139,6 +153,10 @@ header img {
   margin: 1rem;
   max-width: fit-content;
 }
+
+/* .form, .form h3, .form p, .form label, .form input, form, .form{
+  background-color: var(--main-bg-color);
+} */
 
 .form p {
   padding: .25rem 0 .25rem 1rem;
@@ -167,3 +185,13 @@ section embed {
   min-height: 600px;
 }
 
+@media screen and (min-width: 768px) {
+  h1 {
+    align-items: flex-end;
+  }
+
+  header img {
+    position: relative;
+    right: 30%;
+  }
+}
