--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -12,9 +12,9 @@
 }
 
 /* This tag isn't working for some reason */
-body {
+/* body {
   background-color: var(--main-bg-color);
-}
+} */
 
 h1,
 h2,
@@ -30,7 +30,8 @@ h1 {
 
 h2 {
   font-size: 2rem;
-  margin: .75rem 0
+  margin: .75rem 0;
+  /* background-color: var(--main-bg-color); */
 }
 
 h3 {
@@ -96,8 +97,6 @@ header img {
   /* color: var(--); */
 }
 
-
-/* This does nothing. Why??!? */
 .card {
   display: flex;
   flex-direction: column;
@@ -123,36 +122,41 @@ header img {
   width: 100%
 }
 
-/* why is i not italic?? */
-.about-me, .about-me h3, .about-me p, .about-me i {
+aside {
+  display: flex;
+  flex-direction: column;
+}
+
+.about-me,
+.about-me h3,
+.about-me p,
+.about-me i {
   background-color: var(--structure-color);
 }
 
 .about-me {
   padding-bottom: 1rem;
-  border-radius: 40px !important;
+  border-radius: 40px;
+}
 
+.about-me h3 {
+  margin-top: 0;
 }
 
 .about-me p span {
   font-style: italic;
 }
 
-/* .form section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-} */
-
 .form {
   display: flex;
   flex-direction: column;
+  align-self: center;
   align-items: flex-start;
   border: 1rem;
-  border-style:inset;
+  border-style: inset;
   border-color: var(--structure-color);
   margin: 1rem;
-  max-width: fit-content;
+  /* max-width: fit-content; */
 }
 
 /* .form, .form h3, .form p, .form label, .form input, form, .form{
@@ -163,15 +167,14 @@ header img {
   padding: .25rem 0 .25rem 1rem;
 }
 
-.form textarea{
-  width: 350px;
+.form textarea {
+  width: 100%;
   height: 200px;
-  position: relative;
 }
 
 .form button {
   position: relative;
-  left: 350px;
+  left: 80%;
   bottom: 0px;
   margin-bottom: 1rem;
 }
@@ -209,13 +212,52 @@ section embed {
     width: auto;
   }
 
-  /* main {
-    position: relative;
+
+
+  .resume embed {
+    /* width: fit-content;
+    height: 50px; */
   }
 
-  .projects section {
-    width: ;
-    position: absolute;
 
-  } */
+
+}
+
+@media screen and (min-width: 836px) {
+  aside {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+
+  .about-me {
+    width: 100%;
+  }
+
+}
+
+@media screen and (min-width: 992px) {
+
+  #full-size div{
+    display: block;
+  }
+
+  main {
+    position: absolute;
+    width: auto;
+    left: 475px;
+    margin: 1rem;
+  }
+
+  aside {
+    /* min-width: 47%; */
+    position: absolute;
+    max-width: 475px;
+    top: 20;
+    /* left: .25rem; */
+  }
+
+  .resume {
+    display: none;
+  }
 }
