--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -13,7 +13,8 @@
 
 h1,
 h2,
-h3 {
+h3,
+h4 {
   color: var(--heading-color);
   padding-left: 1rem;
 }
@@ -37,9 +38,10 @@ h3 {
 }
 
 h4 {
-  font-size: 1.25rem;
+  font-size: 1.5rem;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   margin: .25 .25;
+  padding: 1rem;
   text-decoration: none
 }
 
@@ -75,23 +77,37 @@ header img {
   padding-inline: 1rem;
 }
 
-.projects {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-
 .projects a {
   text-decoration: none;
   /* color: var(--); */
 }
 
 .card {
-  display: flex;
-  flex-direction: column;
+  display: block;
   align-items: center;
   text-decoration: none;
+  border: solid;
+  border-color: var(--structure-color);
+  border-width: 5px;
+  border-radius: 40px;
+  position: relative;
+  background-color: var(--heading-color);
+  box-sizing: border-box;
+  margin-bottom: 5px;
 }
+
+.card h4 {
+  position: absolute;
+  background-color: var(--structure-color);
+  bottom: 20%;
+  max-width: 125px;
+}
+
+#off-set-card {
+  position: relative;
+  transform: translate(51%, -101.5%);
+}
+
 
 /* Add Hover State for all cards */
 
@@ -100,7 +116,8 @@ header img {
 }
 
 .card-main img {
-  width: 100%
+  width: 100%;
+  background: none;
 }
 
 .card-small {
@@ -108,7 +125,8 @@ header img {
 }
 
 .card-small img {
-  width: 100%
+  width: 100%;
+  background: none;
 }
 
 aside {
