--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -11,6 +11,12 @@
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+/* Keep site from expanding beyond these bounds with margins */
+/* #whole-site {
+  max-width: 1200px;
+  margin: 0 auto;
+} */
+
 h1,
 h2,
 h3,
