--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -11,6 +11,7 @@
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+/* required to allow responsive layout */
 #whole-site {
   position: relative;
 }
@@ -58,18 +59,21 @@ p {
   color: var(--light-green-text);
 }
 
+/* centered for mobile first */
 header {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
+/* scales photo down for website and rounds edges */
 header img {
   max-height: 300px;
   margin-top: 1rem;
   border-radius: 40px;
 }
 
+/* centered for mobile first */
 #nav-bar {
   display: flex;
   justify-content: center;
@@ -79,16 +83,19 @@ header img {
   width: 100%;
 }
 
+/* sets colors and spacing for links */
 #nav-bar a {
   color: var(--light-blue-text);
   background-color: var(--structure-color);
   padding-inline: 1rem;
 }
 
+/* shows which link the cursor is over */
 #nav-bar a:hover {
   color: var(--light-green-text);
 }
 
+/* organizes project cards for layout */
 .projects {
   display: flex;
   flex-direction: row;
@@ -96,13 +103,14 @@ header img {
   align-items: center;
 }
 
+/* styles link for project card */
 .projects a {
   max-width: 100%;
   text-decoration: none;
   /* color: var(--); */
 }
 
-
+/* styles all prokect cards */
 .card {
   display: flex;
   align-items: center;
@@ -118,10 +126,12 @@ header img {
   
 }
 
+/* highlights which card the cursor is on */
 .card:hover {
   border-color: midnightblue;
 }
 
+/* places header in specific portion of card */
 .card h4 {
   position: absolute;
   background-color: var(--structure-color);
@@ -130,19 +140,23 @@ header img {
   border-radius: 0 40px 40px 0;
 }
 
+/* sets main card size */
 .card-main {
   width: 100%
 }
 
+/* limits card image size and removes whitespace */
 .card img {
   width: 100%;
   background: none;
 }
 
+/* sets small card size */
 .card-small {
   flex: 0 0 50%;
 }
 
+/* lays out aside column */
 aside {
   display: flex;
   flex-direction: column;
@@ -150,6 +164,7 @@ aside {
   top: auto; 
 }
 
+/* sets background color for About Me Section */
 .about-me,
 .about-me h3,
 .about-me p,
@@ -157,19 +172,23 @@ aside {
   background-color: var(--structure-color);
 }
 
+/* adds space and border for About Me */
 .about-me {
   padding-bottom: 1rem;
   border-radius: 40px;
 }
 
+/* attaches about me to header without space */
 .about-me h3 {
   margin-top: 0;
 }
 
+/* makes span italic */
 .about-me p span {
   font-style: italic;
 }
 
+/* Styles Contact Me Form */
 .form {
   display: flex;
   flex-direction: column;
@@ -199,16 +218,7 @@ aside {
   margin-bottom: 1rem;
 }
 
-.resume {
-  margin: 0 3rem;
-  background-color: var(--main-bg-color);
-}
-
-
-section embed {
-  min-height: 600px;
-}
-
+/* Creates responsive layout for midsize screens */
 @media screen and (min-width: 768px) {
   header {
     display: block;
@@ -233,19 +243,7 @@ section embed {
   }
 }
 
-@media screen and (min-width: 836px) {
-  aside {
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-  }
-
-  .about-me {
-    width: 100%;
-  }
-
-}
-
+/* Media Break for large size screens */
 @media screen and (min-width: 992px) {
    main {
     position: absolute;
@@ -268,6 +266,7 @@ section embed {
   }
 }
 
+/* Adds margins if site is getting too large */
 @media screen and (min-width: 1010px) {
 
   body {
