--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -100,8 +100,8 @@ header img {
   display: none
 }
 
-#download-me:hover span {
-  display: block;
+#download-me:hover::before {
+  content: attr(data-tooltip);
   position: absolute;
   bottom: 80%;
   background-color: var(--heading-color);
